--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -101,7 +101,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -110,7 +110,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -119,7 +119,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -128,7 +128,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -137,7 +137,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -146,7 +146,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -155,7 +155,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -164,7 +164,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -173,7 +173,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -182,7 +182,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -191,7 +191,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -200,7 +200,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -209,7 +209,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -218,7 +218,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -227,7 +227,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -245,7 +245,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -254,7 +254,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -263,7 +263,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
               </div>
             </div>
