--- a/index.html
+++ b/index.html
@@ -93,182 +93,102 @@
                 class="game w-100 row text-center d-flex justify-content-center"
               >
                 <div class="col-2 card" id="cardo">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
-                  <img
-                    class="card-img front"
-                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
-                    alt=""
-                  />
+                  <img class="card-img front" src="back.jpg" alt="" />
                   <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
